force-app/main/default/objects/Incident__c/fields/FeedBack__c.field-meta.xml
<CustomField>
    <fullName>FeedBack__c</fullName>
    <label>FeedBack</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>