force-app/main/default/objects/Incident__c/fields/Incident_Category__c.field-meta.xml
<CustomField>
    <fullName>Incident_Category__c</fullName>
    <label>Incident Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
                <default>true</default>
                <label>Bug</label>
            </value>
            <value>
                <fullName>NewChangeRequirement</fullName>
                <label>New/Change Requirement</label>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>Data Accuracy</fullName>
            </value>
            <value>
                <fullName>Operation Issue</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>NiceToHave</fullName>
                <label>Nice to Have</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>