force-app/main/default/objects/Incident__c/fields/RaisedBy__c.field-meta.xml
<CustomField>
    <fullName>RaisedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>It will be yourself If this is blank</inlineHelpText>
    <label>Raised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>