force-app/main/default/objects/Incident__c/fields/RecordURL__c.field-meta.xml
<CustomField>
    <fullName>RecordURL__c</fullName>
    <label>Record URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>