force-app/main/default/objects/Incident__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Reopen</fullName>
            </value>
            <value>
                <fullName>Clarification</fullName>
            </value>
            <value>
                <fullName>Assigned to Developer</fullName>
            </value>
            <value>
                <fullName>Ready for Retest</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Duplicate Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>